# powerupgameon_api

./: .env.example  .firebaserc  .gitignore  .vercelignore  Cargo.toml  README.md  app.js  firestore.indexes.json  jest.config.js  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
__tests__/: authenticate.test.js  requireAdmin.test.js
api/: main.rs
config/: env.js  firebase.js
controllers/: authController.js  prizesController.js  questionsController.js  rafflesController.js  registrationsController.js  settingsController.js  spinController.js  submissionsController.js
middleware/: authenticate.js  csrf.js  errorHandler.js  rateLimiters.js  requestContext.js  requestLogger.js  requireAdmin.js
models/: Prize.js  Question.js  Raffle.js  Registration.js  Settings.js  SpinToken.js  Submission.js
routes/: auth.js  prizes.js  questions.js  raffles.js  registrations.js  settings.js  spin.js  submissions.js
scripts/: set-auth-admin-claim.js  update-auth-user-email.js
src/: app_state.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  routes.rs
src/controllers/: auth.rs  mod.rs  prizes.rs  questions.rs  raffles.rs  registrations.rs  settings.rs  spin.rs  submissions.rs
src/features/: mod.rs
src/features/admin_events/application/: mod.rs  publisher.rs
src/features/admin_events/domain/: admin_live_event.rs  mod.rs
src/features/admin_events/infrastructure/: admin_event_bus.rs  mod.rs
src/features/admin_events/presentation/: admin_events_controller.rs  mod.rs
src/features/branding/domain/: brand_logo_upload.rs  mod.rs
src/features/branding/infrastructure/: mod.rs  object_storage.rs
src/features/branding/presentation/: brand_logo_controller.rs  mod.rs
src/features/campaigns/: mod.rs
src/features/campaigns/application/: campaign_service.rs  mod.rs
src/features/campaigns/domain/: campaign.rs  ip_rate_limit.rs  mod.rs  player_outcome_copy.rs
src/features/campaigns/infrastructure/: campaign_paths.rs  campaign_repository.rs  mod.rs
src/features/campaigns/presentation/: campaign_context.rs  campaigns_controller.rs  mod.rs
src/features/inventory/: mod.rs
src/features/inventory/application/: inventory_service.rs  mod.rs
src/features/inventory/domain/: inventory_slot.rs  mod.rs
src/features/inventory/infrastructure/: inventory_repository.rs  mod.rs
src/features/inventory/presentation/: inventory_controller.rs  mod.rs
src/features/locations/: mod.rs
src/features/locations/application/: geo_service.rs  ip_geo_service.rs  mod.rs
src/features/locations/domain/: ip_geo.rs  location.rs  mod.rs
src/features/locations/infrastructure/: ip_api_provider.rs  location_repository.rs  mod.rs
src/features/locations/presentation/: locations_controller.rs  mod.rs
src/features/media/application/: mod.rs  multipart.rs
src/features/player_session/: mod.rs
src/features/uniqueness/: mod.rs
src/middleware/: auth.rs  campaign_context.rs  challenge_window.rs  csrf.rs  mod.rs  rate_limit.rs  request_context.rs  vercel_path.rs
src/models/: mod.rs  prize.rs  question.rs  raffle.rs  registration.rs  settings.rs  spin_token.rs  submission.rs
src/services/: firebase_auth.rs  firestore.rs  mod.rs
src/utils/: challenge_window.rs  client_ip.rs  firestore.rs  firestore_tx.rs  helpers.rs  mod.rs  powerupgameon.code-workspace  spin_token.rs
stress-tests/: STRESS_TEST_README.md  get-admin-token.sh  run-stress-test.sh  stress-test.js
tests/: admin_middleware_test.rs  api_contract_test.rs  app_init_test.rs  auth_middleware_test.rs  auth_session_test.rs  campaign_context_test.rs  campaign_crud_test.rs  campaign_routes_test.rs  campaign_slug_routes_live_test.rs  campaign_time_test.rs  challenge_window_middleware_test.rs  client_ip_test.rs  csrf_test.rs  geo_validation_test.rs  health_rate_limit_exempt_test.rs  helpers_test.rs  inventory_campaign_wide_test.rs  inventory_stagger_test.rs  nested_slug_middleware_test.rs  pagination_test.rs  player_session_cleanup_test.rs  question_cache_test.rs  question_lifecycle_test.rs  rate_limit_toggle_test.rs  request_context_test.rs  spin_inventory_test.rs  spin_rate_limit_test.rs  spin_selection_test.rs  spin_token_test.rs  submission_prize_given_test.rs  uniqueness_test.rs  upload_body_limit_test.rs  vercel_path_routes_test.rs
tests/common/: mod.rs
utils/: asyncHandler.js  challengeWindow.js  clientIp.js  helpers.js  logger.js  serializeFirestore.js  spinToken.js
(+26 files in other folders)
