[package]
name = "powerupgameon-api"
version = "0.1.0"
edition = "2021"
default-run = "powerupgameon-api"

[lib]
name = "powerupgameon_api"
path = "src/lib.rs"

[[bin]]
name = "powerupgameon-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
jsonwebtoken = "10"
ring = "0.17"
base64 = "0.22"
rand = "0.8"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
firestore = "0.47"
gcloud-sdk = "0.28"
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dashmap = "5"
reqwest = { version = "0.12", features = ["json"] }
http = "1"
once_cell = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", features = ["ring"] }
jsonwebtoken-v10 = { package = "jsonwebtoken", version = "10", features = ["aws_lc_rs"] }
vercel_runtime = { version = "2", features = ["axum"] }

[[bin]]
name = "main"
path = "api/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[dev-dependencies]
tokio-test = "0.4"
base64 = "0.22"
ring = "0.17"
serde_json = "1"
axum = "0.8"

[[bin]]
name = "set-auth-admin-claim"
path = "src/bin/set_auth_admin_claim.rs"

[[bin]]
name = "update-auth-user-email"
path = "src/bin/update_auth_user_email.rs"

[[bin]]
name = "migrate-to-campaigns"
path = "src/bin/migrate_to_campaigns.rs"
